--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
-        applicationId "com.example.mahe.userlogin"
+        applicationId "com.example.mahe.smartwatch30"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
